--- a/Administrador/Views/Home/Index.cshtml
+++ b/Administrador/Views/Home/Index.cshtml
@@ -60,26 +60,87 @@
     <div class="ui link cards">
         <div class="container">
             <div style="height:5px"></div>
-            <h2 style="color:white" class="ui center aligned icon header">
-
-                @*<img src="~/Recursos/Imagenes/LogoBackline.png" style="width: 50px" />*@
-
+            <h2 style="color:white" class="ui center aligned header">
+                @*<img src="~/Recursos/Imagenes/IconoAsmar.png" class="ui image">*@
                 Bienvenido al sistema de administración de edificios @Model.Nombre
             </h2>
-            <div class="row">
-                @*FichaContribuyente*@
-                <div class="col-md-4">
-                    <div class="card mb-4 shadow-sm" style="opacity: 0.9">
-                        <div class="contenedor-imagen">
-                            <img class="card-img-top" src="~/Recursos/Imagenes/AdminPersonas.png" alt="Card image cap" style="opacity: 0.9">
+            <br />
+            <div class="ui link cards">
+                <div class="container">
+                    <div class="row">
+                       
+                        @*CargadorProductos*@
+                        <div class="col-md-4">
+                            <div class="card mb-4 shadow-sm" style="opacity:.85">
+                                <div class="contenedor-imagen">
+                                    <img class="card-img-top" src="~/Recursos/Imagenes/BtnUser.png" alt="Card image cap">
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-text">Aquí podrás cargar los productos desde el excel de stock vs consumo de Rayén.</p>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="btn-group">
+                                            <div id="btnMarketPlace" onclick="window.location.href = '/AdminPersonas'" class="ui right labeled icon black button">
+                                                Personas
+                                                <i class="hand point left icon"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="card-body">
-                            <p class="card-text">Aquí podrás revisar las fichas de los copropietarios.</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <div id="btnMarketPlace" onclick="window.location.href = '/AdminPersonas'" class="ui right labeled icon black button">
-                                        Personas
-                                        <i class="hand point left icon"></i>
+                       
+                       
+                        
+                        <div class="col-md-4">
+                            <div class="card mb-4 shadow-sm" style="opacity:.85">
+                                <div class="contenedor-imagen">
+                                    <img class="card-img-top" src="~/Recursos/Imagenes/BtnLog.png" alt="Card image cap">
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-text">Aquí podrás ver el log de los movimientos más importantes dentro del sistema.</p>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="btn-group">
+                                            <div id="btnMarketPlace" onclick="window.location.href = '/log'" class="ui right labeled icon black button">
+                                                Log del sistema
+                                                <i class="hand point left icon"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card mb-4 shadow-sm" style="opacity:.85">
+                                <div class="contenedor-imagen">
+                                    <img class="card-img-top" src="~/Recursos/Imagenes/BtnUser.png" alt="Card image cap">
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-text">Aquí podrás crear y editar los usuarios del sistema y sus privilegios.</p>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="btn-group">
+                                            <div id="btnMarketPlace" onclick="window.location.href = '/MantenedorUsuarios'" class="ui right labeled icon black button">
+                                                Usuarios y privilegios
+                                                <i class="hand point left icon"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card mb-4 shadow-sm" style="opacity:.85">
+                                <div class="contenedor-imagen">
+                                    <img class="card-img-top" src="~/Recursos/Imagenes/btnYou.png" alt="Card image cap">
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-text">Aquí podrás ver videos de referencia para el uso de los módulos.</p>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="btn-group">
+                                            <div id="btnMarketPlace" onclick="window.location.href = '/videos'" class="ui right labeled icon black button">
+                                                ver videos
+                                                <i class="youtube icon"></i>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -89,5 +150,7 @@
             </div>
         </div>
     </div>
+
+    
 </body>
 </html>
