--- a/Administrador/Views/Home/Index.cshtml
+++ b/Administrador/Views/Home/Index.cshtml
@@ -68,7 +68,7 @@
             <div class="ui link cards">
                 <div class="container">
                     <div class="row">
-                       
+
                         @*CargadorProductos*@
                         <div class="col-md-4">
                             <div class="card mb-4 shadow-sm" style="opacity:.85">
@@ -88,9 +88,27 @@
                                 </div>
                             </div>
                         </div>
-                       
-                       
-                        
+
+                        <div class="col-md-4">
+                            <div class="card mb-4 shadow-sm" style="opacity:.85">
+                                <div class="contenedor-imagen">
+                                    <img class="card-img-top" src="~/Recursos/Imagenes/Btnveh.png" alt="Card image cap">
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-text">Aquí podrás cargar los productos desde el excel de stock vs consumo de Rayén.</p>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="btn-group">
+                                            <div id="btnMarketPlace" onclick="window.location.href = '/AdminPersonas'" class="ui right labeled icon black button">
+                                                Vehículos
+                                                <i class="hand point left icon"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
                         <div class="col-md-4">
                             <div class="card mb-4 shadow-sm" style="opacity:.85">
                                 <div class="contenedor-imagen">
