--- a/Administrador/Views/Home/Index.cshtml
+++ b/Administrador/Views/Home/Index.cshtml
@@ -80,7 +80,7 @@
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="btn-group">
                                             <div id="btnMarketPlace" onclick="window.location.href = '/AdminPersonas'" class="ui right labeled icon black button">
-                                                Personas
+                                                Inquilinos
                                                 <i class="hand point left icon"></i>
                                             </div>
                                         </div>
