--- a/Administrador/Views/Home/Index.cshtml
+++ b/Administrador/Views/Home/Index.cshtml
@@ -80,7 +80,7 @@
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="btn-group">
                                             <div id="btnMarketPlace" onclick="window.location.href = '/AdminPersonas'" class="ui right labeled icon black button">
-                                                Inquilinos
+                                                Copropietarios
                                                 <i class="hand point left icon"></i>
                                             </div>
                                         </div>
@@ -98,7 +98,7 @@
                                     <p class="card-text">Aquí podrás cargar los productos desde el excel de stock vs consumo de Rayén.</p>
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="btn-group">
-                                            <div id="btnMarketPlace" onclick="window.location.href = '/AdminPersonas'" class="ui right labeled icon black button">
+                                            <div id="btnMarketPlace" onclick="window.location.href = '/MantenedorVehiculos'" class="ui right labeled icon black button">
                                                 Vehículos
                                                 <i class="hand point left icon"></i>
                                             </div>
@@ -156,24 +156,6 @@
                                         <div class="btn-group">
                                             <div id="btnMarketPlace" onclick="window.location.href = '/videos'" class="ui right labeled icon black button">
                                                 ver videos
-                                                <i class="youtube icon"></i>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="card mb-4 shadow-sm" style="opacity:.85">
-                                <div class="contenedor-imagen">
-                                    <img class="card-img-top" src="~/Recursos/Imagenes/btnYou.png" alt="Card image cap">
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-text">Aquí podrás ver videos de referencia para el uso de los módulos.</p>
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <div class="btn-group">
-                                            <div id="btnMarketPlace" onclick="window.location.href = '/videos'" class="ui right labeled icon black button">
-                                                Prueba
                                                 <i class="youtube icon"></i>
                                             </div>
                                         </div>
