Se crea mantenedor de Recintos

--- a/Administrador/Views/Login/Index.cshtml
+++ b/Administrador/Views/Login/Index.cshtml
@@ -120,10 +120,9 @@
             <div class="card">
 
                 <div class="card-body">
-                    <h3 class="ui center aligned header" style="color:white">
-                        @*<img src="~/Recursos/Imagenes/LogoBackline.png" class="ui image">*@
-                        Administrador
-                    </h3>
+                    <h1 class="ui center aligned header" style="color:white">
+                        @*<img src="~/Recursos/Imagenes/LogoYouCommunity.png" class="ui massive image">*@
+                    </h1>
                     <div class="d-flex justify-content-end social_icon">
 
                         <span data-toggle="tooltip" title="Acceso a videos de apoyo"><i onclick="window.open(@ConfigurationSettings.AppSettings.Get("URL_Videos"),'_blank') ;" class="fab fa-youtube"></i></span>
