--- a/Administrador/Views/Home/Index.cshtml
+++ b/Administrador/Views/Home/Index.cshtml
@@ -98,7 +98,7 @@
                                     <p class="card-text">Aquí podrás cargar los productos desde el excel de stock vs consumo de Rayén.</p>
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="btn-group">
-                                            <div id="btnMarketPlace" onclick="window.location.href = '/MantenedorVehiculos'" class="ui right labeled icon black button">
+                                            <div id="btnMarketPlace" onclick="window.location.href = '/MantenedorVehiculos?limpiar=1'" class="ui right labeled icon black button">
                                                 Vehículos
                                                 <i class="hand point left icon"></i>
                                             </div>
@@ -138,6 +138,24 @@
                                         <div class="btn-group">
                                             <div id="btnMarketPlace" onclick="window.location.href = '/MantenedorUsuarios'" class="ui right labeled icon black button">
                                                 Usuarios y privilegios
+                                                <i class="hand point left icon"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card mb-4 shadow-sm" style="opacity:.85">
+                                <div class="contenedor-imagen">
+                                    <img class="card-img-top" src="~/Recursos/Imagenes/btnRecintos.png" alt="Card image cap">
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-text">Aquí podrás crear y editar los recintos del sistema.</p>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="btn-group">
+                                            <div id="btnMarketPlace" onclick="window.location.href = '/MantenedorRecintos'" class="ui right labeled icon black button">
+                                                Recintos
                                                 <i class="hand point left icon"></i>
                                             </div>
                                         </div>
