--- a/Administrador/Views/Home/Index.cshtml
+++ b/Administrador/Views/Home/Index.cshtml
@@ -79,7 +79,7 @@
                                     <p class="card-text">Aquí podrás cargar los productos desde el excel de stock vs consumo de Rayén.</p>
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="btn-group">
-                                            <div id="btnMarketPlace" onclick="window.location.href = '/AdminPersonas'" class="ui right labeled icon black button">
+                                            <div id="btnMarketPlace" onclick="window.location.href = '/AdminPersonas?limpiar=1'" class="ui right labeled icon black button">
                                                 Copropietarios
                                                 <i class="hand point left icon"></i>
                                             </div>
