--- a/Administrador/Views/HomePrivado/Index.cshtml
+++ b/Administrador/Views/HomePrivado/Index.cshtml
@@ -66,7 +66,7 @@
                 Bienvenido a Komunity @Model.Nombre
             </h2>
             <br />
-            <div class="ui link cards">
+            <div class="ui link center cards">
                 <div class="container">
                     <div class="row">
 
@@ -80,7 +80,7 @@
                                     <p class="card-text">Aquí podrás cargar los productos desde el excel de stock vs consumo de Rayén.</p>
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="btn-group">
-                                            <div id="btnMarketPlace" onclick="window.location.href = '/AdminPersonas'" class="ui right labeled icon black button">
+                                            <div id="btnMarketPlace" onclick="window.location.href = '/AdminPersonas?limpiar=1'" class="ui right labeled icon black button">
                                                 Copropietarios
                                                 <i class="hand point left icon"></i>
                                             </div>
